Align bottom content

--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -55,119 +55,104 @@
         <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
             <div class="second-banner-container col-md-12 col-lg-10 col-lg-offset-1">
                 <div class="df-mac-preview">
-                    <div class="df-mac-preview-overlay blured"></div>
-                    <div class="df-mac-preview-overlay circle">
-                        <i class="fa fa-play" aria-hidden="true"></i>
-                    </div>
-                    <div class="df-mac-preview-overlay text">
-                        <div>Watch Video</div>
-                    </div>
+                    <a href="https://www.youtube.com/watch?v=vbWls5aqg0A" target="_blank">
+                        <div class="df-mac-preview-overlay blured"></div>
+                        <div class="df-mac-preview-overlay circle">
+                            <i class="fa fa-play" aria-hidden="true"></i>
+                        </div>
+                        <div class="df-mac-preview-overlay text">
+                            <div>Watch Video</div>
+                        </div>
+                    </a>
                     <img src="/images/macbook-hp-df-1.png">
                 </div>
             </div>
         </div>
+    </div>
 
 
 
+    <div class="row">
+        <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-12 col-md-offset-0 col-lg-12 col-lg-offset-0">
+            <div class="second-banner-container grid-24 col-md-24 col-lg-22 col-lg-offset-1">
+                <h4>Click on a client platform below to download a sample application and learn how to make API calls:</h4>
 
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div style="margin-top:10px;" class="row">
-        <div class="col-sm-6">
-            <p><a href="http://wiki.dreamfactory.com/DreamFactory/Tutorials" target="tutorials">Written Tutorials</a></p>
-            <p><a href="http://wiki.dreamfactory.com/DreamFactory/Videos" target="videos">Video Tutorials</a></p>
-            <p><a href="http://wiki.dreamfactory.com" target="documentation">Full Documentation</a></p>
-            <p><a href="http://community.dreamfactory.com" target="forum">Community Forum</a></p>
-            <p><a href="https://github.com/dreamfactorysoftware/dreamfactory/issues" target="issues">Bugs and Feature Requests</a></p>
-            <p><a href="https://twitter.com/dfsoftwareinc" target="twitter">DreamFactory on Twitter</a></p>
-            <p><a href="http://blog.dreamfactory.com" target="blog">DreamFactory Blog</a></p>
-            <p><a href="http://www.dreamfactory.com/support" target="support">Contact Support</a></p>
-        </div>
-        <div class="col-sm-6">
-            <iframe width="350" height="200" src="https://www.youtube.com/embed/vbWls5aqg0A" frameborder="0" allowfullscreen=""></iframe>
-        </div>
-    </div>
-    <div style="margin-top:10px;" class="row">
-        <div class="col-sm-12">
-            <h4>Click on a client platform below to download a sample application and learn how to make API calls:</h4>
-        </div>
-    </div>
-    <div class="row">
-        <hr class="content-divider">
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <h5>Native Examples</h5>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/ios-sdk" target="_blank">
-                <img src="/images/in-product/in_product_apple_lil.png" alt="iOS"><br>Objective-C
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/ios-swift-sdk" target="_blank">
-                <img src="/images/in-product/in_product_swift_lil.png" alt="Swift"><br>Apple Swift
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/android-sdk" target="_blank">
-                <img src="/images/in-product/in_product_android_lil.png" alt="Android"><br>Android Java
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/.net-sdk" target="_blank">
-                <img src="/images/in-product/in_product_dotnet_lil.png" alt=".Net"><br>Microsoft .NET
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <hr class="content-divider">
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <h5>Javascript Examples</h5>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/javascript-sdk" target="_blank">
-                <img src="/images/in-product/in_product_javascript_lil.png" alt="JavaScript"><br>Javascript
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/ionic-sdk" target="_blank">
-                <img src="/images/in-product/in_product_ionic_lil.png" alt="ionic"><br>ionic
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/titanium-sdk" target="_blank">
-                <img src="/images/in-product/in_product_titanium_lil.png" alt="Titanium"><br>Titanium
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/angular-sdk" target="_blank">
-                <img src="/images/in-product/in_product_angular_lil.png" alt="AngularJS"><br>AngularJS
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/angular2-sdk" target="_blank">
-                <img src="/images/in-product/in_product_angular2_lil.png" alt="Angular 2"><br>Angular 2
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a href="https://github.com/dreamfactorysoftware/reactjs-sdk" target="_blank">
-                <img src="/images/in-product/in_product_reactjs_lil.png" alt="React"><br>React
-            </a>
+                <div class="row">
+                    <hr class="content-divider">
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h5>Native Examples</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/ios-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_apple_lil.png" alt="iOS"><br>Objective-C
+                        </a>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/ios-swift-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_swift_lil.png" alt="Swift"><br>Apple Swift
+                        </a>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/android-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_android_lil.png" alt="Android"><br>Android Java
+                        </a>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/.net-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_dotnet_lil.png" alt=".Net"><br>Microsoft .NET
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <hr class="content-divider">
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h5>Javascript Examples</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/javascript-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_javascript_lil.png" alt="JavaScript"><br>Javascript
+                        </a>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/ionic-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_ionic_lil.png" alt="ionic"><br>ionic
+                        </a>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/titanium-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_titanium_lil.png" alt="Titanium"><br>Titanium
+                        </a>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/angular-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_angular_lil.png" alt="AngularJS"><br>AngularJS
+                        </a>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/angular2-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_angular2_lil.png" alt="Angular 2"><br>Angular 2
+                        </a>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <a href="https://github.com/dreamfactorysoftware/reactjs-sdk" target="_blank">
+                            <img src="/images/in-product/in_product_reactjs_lil.png" alt="React"><br>React
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <hr class="content-divider">
+                </div>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <hr class="content-divider">
-    </div>
+
 
 </div>
