--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -6,7 +6,10 @@
                     <h4>
                         <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;WE WANT TO HERE FROM YOU! 
                     </h4>
-                    Has Dreamfactory made a difference in your organization? Are you doing something novel and interesting with our software? We’d love to add your story to the Dreamfactory.com user showcase! E-mail us at info@dreamfactory.com with your project details and we’ll add your organization name, URL, and story to our site!
+                    Has Dreamfactory made a difference in your organization?
+                    Are you doing something novel and interesting with our software?
+                    We’d love to add your story to the Dreamfactory.com user showcase!
+                    E-mail us at <b>info@dreamfactory.com</b> with your project details and we’ll add your organization name, URL, and story to our site!
                 </div>
             </div>
         </div>
@@ -28,21 +31,19 @@
                 <h3>Welcome to DreamFactory!</h3>
 
                 <p>DreamFactory provides all of the backend services that you need to build great mobile, web, and IoT applications. Follow the links below to get started:</p>
-                <p>
+                <p data-ng-init="resources = [
+                    {name: 'Written Tutorials',         icon: 'file-text',       link: 'http://wiki.dreamfactory.com/DreamFactory/Tutorials'},
+                    {name: 'Video Tutorials',           icon: 'video-camera',    link: 'http://wiki.dreamfactory.com/DreamFactory/Videos'},
+                    {name: 'Full Documentation',        icon: 'book',            link: 'http://wiki.dreamfactory.com/'},
+                    {name: 'Community Forum',           icon: 'comments',        link: 'http://community.dreamfactory.com/'},
+                    {name: 'Bugs and Feature Requests', icon: 'bug',             link: 'https://github.com/dreamfactorysoftware/dreamfactory/issues'},
+                    {name: 'DreamFactory on Twitter',   icon: 'twitter',         link: 'https://twitter.com/dfsoftwareinc'},
+                    {name: 'DreamFactory Blog',         icon: 'pencil-square-o', link: 'http://blog.dreamfactory.com/'},
+                    {name: 'Contact Support',           icon: 'support',         link: 'http://www.dreamfactory.com/support'}
+                ]">
 
-                    <div data-ng-repeat="resource in
-                        [
-                            {name: 'Written Tutorials',         icon: 'file-text',       link: 'http://wiki.dreamfactory.com/DreamFactory/Tutorials'},
-                            {name: 'Video Tutorials',           icon: 'video-camera',    link: 'http://wiki.dreamfactory.com/DreamFactory/Videos'},
-                            {name: 'Full Documentation',        icon: 'book',            link: 'http://wiki.dreamfactory.com/'},
-                            {name: 'Community Forum',           icon: 'comments',        link: 'http://community.dreamfactory.com/'},
-                            {name: 'Bugs and Feature Requests', icon: 'bug',             link: 'https://github.com/dreamfactorysoftware/dreamfactory/issues'},
-                            {name: 'DreamFactory on Twitter',   icon: 'twitter',         link: 'https://twitter.com/dfsoftwareinc'},
-                            {name: 'DreamFactory Blog',         icon: 'pencil-square-o', link: 'http://blog.dreamfactory.com/'},
-                            {name: 'Contact Support',           icon: 'support',         link: 'http://www.dreamfactory.com/support'},
-                        ]
-                    ">
-                        <div class="banner resource-link">
+                    <div data-ng-repeat="resource in resources">
+                        <div class="banner outligned resource-link">
                             <i class="fa fa-{{resource.icon}}" aria-hidden="true"></i>
                             &nbsp;
                             <a href="{{resource.link}}" target="_blank">{{resource.name}}</a>
@@ -75,76 +76,66 @@
     <div class="row">
         <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-12 col-md-offset-0 col-lg-12 col-lg-offset-0">
             <div class="second-banner-container grid-24 col-md-24 col-lg-22 col-lg-offset-1">
-                <h4>Click on a client platform below to download a sample application and learn how to make API calls:</h4>
+                <hr class="content-divider">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                        <h4 class="text-center examples-heading">Click on a client platform below to download a sample application and learn how to make API calls:</h4>
+                    </div>
+                </div>
+
 
                 <div class="row">
-                    <hr class="content-divider">
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h5>Native Examples</h5>
+                    <div class="col-md-6 col-md-offset-3">
+                        <p class="text-center examples-subheading">Native Examples</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/ios-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_apple_lil.png" alt="iOS"><br>Objective-C
-                        </a>
-                    </div>
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/ios-swift-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_swift_lil.png" alt="Swift"><br>Apple Swift
-                        </a>
-                    </div>
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/android-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_android_lil.png" alt="Android"><br>Android Java
-                        </a>
-                    </div>
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/.net-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_dotnet_lil.png" alt=".Net"><br>Microsoft .NET
-                        </a>
+
+                <div class="row" data-ng-init="nativeExamples = [
+                    {name: 'Objective-C',    url: 'https://github.com/dreamfactorysoftware/ios-sdk',       icon: 'in_product_apple_lil.png'},
+                    {name: 'Apple Swift',    url: 'https://github.com/dreamfactorysoftware/ios-swift-sdk', icon: 'in_product_swift_lil.png'},
+                    {name: 'Android Java',   url: 'https://github.com/dreamfactorysoftware/android-sdk',   icon: 'in_product_android_lil.png'},
+                    {name: 'Microsoft .NET', url: 'https://github.com/dreamfactorysoftware/.net-sdk',      icon: 'in_product_dotnet_lil.png'}
+                ]">
+                    <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 example-item-container">
+                        <div class="col-xs-6 col-sm-3 col-md-3 text-center" data-ng-repeat="example in nativeExamples">
+                            <a href="{{example.url}}" target="_blank">
+                                <div class="banner outligned example-item">
+                                    <img src="/images/in-product/{{example.icon}}" alt="{{example.name}}">
+                                </div>
+                                <div class="text-center example-item-name">
+                                    {{example.name}}
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
+
                 <div class="row">
-                    <hr class="content-divider">
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h5>Javascript Examples</h5>
+                    <div class="col-md-6 col-md-offset-3">
+                        <p class="text-center examples-subheading">JavaScript Examples</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/javascript-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_javascript_lil.png" alt="JavaScript"><br>Javascript
-                        </a>
-                    </div>
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/ionic-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_ionic_lil.png" alt="ionic"><br>ionic
-                        </a>
-                    </div>
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/titanium-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_titanium_lil.png" alt="Titanium"><br>Titanium
-                        </a>
-                    </div>
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/angular-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_angular_lil.png" alt="AngularJS"><br>AngularJS
-                        </a>
-                    </div>
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/angular2-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_angular2_lil.png" alt="Angular 2"><br>Angular 2
-                        </a>
-                    </div>
-                    <div class="col-sm-2 text-center">
-                        <a href="https://github.com/dreamfactorysoftware/reactjs-sdk" target="_blank">
-                            <img src="/images/in-product/in_product_reactjs_lil.png" alt="React"><br>React
-                        </a>
+
+                <div class="row" data-ng-init="javascriptExamples = [
+                    {name: 'JavaScript', url: 'https://github.com/dreamfactorysoftware/javascript-sdk', icon: 'in_product_javascript_lil.png'},
+                    {name: 'Ionic',      url: 'https://github.com/dreamfactorysoftware/ionic-sdk',      icon: 'in_product_ionic_lil.png'},
+                    {name: 'Titanium',   url: 'https://github.com/dreamfactorysoftware/titanium-sdk',   icon: 'in_product_titanium_lil.png'},
+                    {name: 'AngularJS',  url: 'https://github.com/dreamfactorysoftware/angular-sdk',    icon: 'in_product_angular_lil.svg'},
+                    {name: 'Angular 2',  url: 'https://github.com/dreamfactorysoftware/angular2-sdk',   icon: 'in_product_angular2_lil.png'},
+                    {name: 'React',      url: 'https://github.com/dreamfactorysoftware/reactjs-sdk',    icon: 'in_product_reactjs_lil.png'}
+                ]">
+
+                    <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 example-item-container">
+                        <div class="col-xs-6 col-sm-3 col-md-2 text-center" data-ng-repeat="example in javascriptExamples">
+                            <a href="{{example.url}}" target="_blank">
+                                <div class="banner outligned example-item">
+                                    <img src="/images/in-product/{{example.icon}}" alt="{{example.name}}">
+                                </div>
+                                <div class="text-center example-item-name">
+                                    {{example.name}}
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
