Improve examples title

--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -78,7 +78,7 @@
             <div class="second-banner-container grid-24 col-md-24 col-lg-22 col-lg-offset-1">
                 <hr class="content-divider">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                         <h4 class="text-center examples-heading">Click on a client platform below to download a sample application and learn how to make API calls:</h4>
                     </div>
                 </div>
